--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.24.1",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "dom": "0.0.3",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
     "mongoose": "^4.9.6",
     "morgan": "~1.8.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^2.4.1"
   }
 }
