--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dom": "0.0.3",
     "express": "~4.15.2",
     "hjs": "~0.0.6",
+    "i": "^0.3.5",
     "mongoose": "^4.9.6",
     "morgan": "~1.8.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
